--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -1,9 +1,35 @@
 .cover__background {
-  background-image: url(../../../images/__background.svg);
+  background-image: url(../../../images/cover-trains.jpg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
   position: relative;
   object-fit: contain;
-  width: 1184px;
-  height: 740px;
   margin: 0 auto;
   z-index: 1;
+  display: flex;
+}
+
+@media (max-width: 500px) {
+.cover__background {
+  min-height: 200px;
+}
+}
+
+@media (min-width: 501px) and (max-width: 768px){
+.cover__background {
+  min-height: 480px;
+}
+}
+
+@media (min-width: 769px) and (max-width: 1024px) {
+.cover__background {
+  min-height: 640px;
+}
+}
+
+@media (min-width: 1025px) and (max-width: 1280px) {
+.cover__background {
+  min-height: 740px;
+}
 }
