--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -2,8 +2,7 @@
   position: absolute;
   background-color: #2a2c2f;
   opacity: 0.3;
-  width: 1184px;
-  height: 740px;
+  width: 100%;
   margin: 0 auto;
   z-index: 2;
   transition: opacity 0.3s ease;
@@ -12,3 +11,29 @@
 .cover__overlay:hover {
 opacity: 0.8;
 }
+
+@media (max-width: 500px) {
+.cover__overlay {
+  min-height: 200px;
+}
+}
+
+@media (min-width: 501px) and (max-width: 768px){
+.cover__overlay {
+  min-height: 480px;
+}
+}
+
+@media (min-width: 769px) and (max-width: 1024px) {
+.cover__overlay {
+  min-height: 640px;
+}
+}
+
+@media (min-width: 1025px) and (max-width: 1280px) {
+.cover__overlay {
+  min-height: 740px;
+}
+}
+
+
