--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,12 +1,47 @@
 .cover__subtitle {
   position: absolute;
   z-index: 3;
-  top: 429px;
-  left: 412px;
-  max-width: 360px;
-  font-size: 18px;
-  line-height: 22px;
-  color: #fff;
   text-align: center;
   font-weight: normal;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
 }
+
+@media (max-width: 500px) {
+.cover__subtitle {
+  font-size: 14px;
+  line-height: 16px;
+  max-width: 288px;
+  top: 119px;
+}
+}
+
+@media (min-width: 501px) and (max-width: 768px) {
+.cover__subtitle {
+  font-size: 18px;
+  line-height: 22px;
+  max-width: 360px;
+  top: 299px;
+}
+}
+
+@media (min-width: 769px) and (max-width: 1024px) {
+.cover__subtitle {
+  font-size: 18px;
+  line-height: 22px;
+  max-width: 360px;
+  top: 379px;
+}
+}
+
+@media (min-width: 1025px) and (max-width: 1280px) {
+.cover__subtitle {
+  font-size: 18px;
+  line-height: 22px;
+  max-width: 360px;
+  top: 429px;
+}
+}
+
