--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,12 +1,49 @@
 .cover__title {
   position: absolute;
-  top: 245px;
-  left: 312px;
+  display: flex;
   text-align: center;
-  max-width: 560px;
-  line-height: 76px;
-  font-size: 72px;
-  color: #fff;
   font-weight: bold;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
   z-index: 3;
 }
+
+@media (max-width: 500px) {
+.cover__title {
+  font-size: 32px;
+  line-height: 35px;
+  max-width: 220px;
+  top: 33px;
+}
+}
+
+@media (min-width: 501px) and (max-width: 768px) {
+.cover__title {
+  font-size: 72px;
+  line-height: 76px;
+  max-width: 560px;
+  top: 115px;
+}
+}
+
+@media (min-width: 769px) and (max-width: 1024px) {
+.cover__title {
+  font-size: 72px;
+  line-height: 76px;
+  max-width: 560px;
+  top: 195px;
+}
+}
+
+@media (min-width: 1025px) and (max-width: 1280px) {
+.cover__title {
+  font-size: 72px;
+  line-height: 76px;
+  max-width: 560px;
+  top: 245px;
+}
+}
+
+
