--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,7 +1,6 @@
 .cover {
   position: relative;
-  width: 1184px;
+  width: 100%;
   margin: 0 auto;
-  height: fit-content;
   box-sizing: content-box;
 }
