--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,7 +1,20 @@
 .footer__copyright {
-display: flex;
-color: #fff;
-font-size: 14px;
-line-height: 16px;
-max-width: fit-content;
+  display: flex;
+  font-size: 14px;
+  max-width: fit-content;
+  height:fit-content;
+}
+
+@media (max-width: 767px) {
+.footer__copyright {
+  line-height: 14px;
+  align-self: end;
+  
+}
+}
+
+@media (min-width: 768px) and (max-width: 1280px) {
+.footer__copyright {
+  line-height: 16px;
+}
 }
