--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -1,8 +1,25 @@
 .footer__link {
-display: flex;
-color: #fff;
-font-size: 16px;
-line-height: 18px;
-margin-right: 18px;
 text-decoration: none;
 }
+
+@media (max-width: 767px) {
+.footer__link {
+  font-size: 24px;
+  line-height: 24px;
+}
+.footer__link:not(:last-child) {
+  margin-bottom: 33px;
+}
+}
+
+@media (min-width: 768px) and (max-width: 1280px) {
+.footer__link {
+  font-size: 16px;
+  line-height: 18px;
+}
+.footer__link:not(:last-child) {
+  margin-right: 18px;
+}
+}
+
+
