--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -1,5 +1,17 @@
 .footer__links {
-display: flex;
-list-style: none;
-max-width: fit-content;
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+  max-width: fit-content;
 }
+
+@media (max-width: 767px) {
+.footer__links {
+  flex-direction: column;
+  max-width: 158px;
+}}
+
+@media (min-width: 768px) and (max-width: 1280px) {
+.footer__links {
+  flex-direction: row;
+}}
