--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,8 +1,34 @@
 .footer {
-display: flex;
-justify-content: space-between;
-max-width: 1184px;
-margin: 0 auto;
-padding-top: 92px;
-padding-bottom: 24px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding-bottom: 24px;
+  
+}
+
+@media (max-width: 767px) {
+.footer {
+  padding-top: 64px;
+  padding-left: 16px;
+  padding-right: auto;
+  min-height: 310px;
+  max-width: 183px;
+}
+}
+
+@media (min-width: 768px) and (max-width: 1023px) {
+.footer {
+  padding-top: 88px;
+  padding-left: 24px;
+  padding-right: 24px;
+}
+}
+
+@media (min-width: 1024px) and (max-width: 1280px) {
+.footer {
+  padding-top: 92px;
+  padding-left: 48px;
+  padding-right: 48px;
+  max-width: 1184px;
+}
 }
