--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,7 +1,19 @@
 .header__logo {
   display: flex;
+  margin-left: 0;
+  max-width: 176px;
+}
+
+@media (max-width: 767px) {
+.header__logo {
+  width: 142px;
+  height: 42px;
+}
+}
+
+@media (min-width: 768px) and (max-width: 1280px) {
+.header__logo {
   width: 176px;
   height: 52px;
-  display: flex;
-  margin-left: 0;
+}
 }
