--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,7 +1,30 @@
 .header {
   display: flex;
   justify-content: space-between;
-  padding: 28px 48px 0 48px;
   max-width: 1184px;
   background-color: #2a2c2f;
+}
+
+@media (max-width: 320px) {
+.header {
+  padding: 16px 16px 0 16px;
+}
+}
+
+@media (min-width: 321px) and (max-width: 768px) {
+.header {
+  padding: 28px 24px 0 24px;
+}
+}
+
+@media (min-width: 769px) and (max-width: 1024px) {
+.header {
+  padding: 28px 48px 0 48px;
+}
+}
+
+@media (min-width: 1025px) and (max-width: 1280px) {
+.header {
+  padding: 28px 48px 0 48px;
+}
 }
