--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,7 +1,19 @@
 .intro__title {
-  max-width: 690px;
-  line-height: 58px;
-  font-size: 54px;
-  color: #fff;
   font-weight: bold;
+}
+
+@media (max-width: 767px) {
+.intro__title {
+  font-size: 32px;
+  line-height: 35px;
+  max-width: 220px;
+}
+}
+
+@media (min-width: 768px) and (max-width: 1280px) {
+.intro__title {
+  font-size: 54px;
+  line-height: 58px;
+  max-width: 690px;
+}
 }
