--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,6 +1,37 @@
 .intro {
   max-width: 690px;
-  height: 429px;
+}
+
+@media (max-width: 320px) {
+.intro {
+  padding-top: 64px;
+  padding-left: 16px;
+  padding-right: 16px;
+  padding-bottom: 64px;
+}
+}
+
+@media (min-width: 321px) and (max-width: 768px) {
+.intro {
+  padding-top: 88px;
+  padding-left: 24px;
+  padding-right: 24px;
+  padding-bottom: 88px;
+}
+}
+
+@media (min-width: 769px) and (max-width: 1024px) {
+.intro {
   padding-top: 92px;
-  margin-left: 148px;
+  padding-left: 48px;
+  padding-bottom: 92px;
+}
+}
+
+@media (min-width: 1025px) and (max-width: 1280px) {
+.intro {
+  padding-top: 92px;
+  padding-left: 148px;
+  padding-bottom: 92px;
+}
 }
