--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -3,5 +3,28 @@
   height: 14px;
   font-size: 10px;
   line-height: 14px;
-  color: #fff;
+}
+
+@media (max-width: 320px) {
+.lead__caption {
+margin-left: 16px;
+}
+}
+
+@media (min-width: 321px) and (max-width: 768px) {
+.lead__caption {
+margin-left: 24px;
+}
+}
+
+@media (min-width: 769px) and (max-width: 1024px) {
+.lead__caption {
+margin-left: 48px;
+}
+}
+
+@media (min-width: 1025px) and (max-width: 1280px) {
+.lead__caption {
+margin-left: 148px;
+}
 }
