--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,6 +1,36 @@
 .lead__image {
-  background-image: url(../../../images/__image.svg);
-  width: 984px;
-  height: 615px;
-  margin-top: 64px;
+  background-image: url(../../../images/lead-polka.jpg);
+  max-width: 984px;
+  max-height: 615px;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position: center;
+  display: block;
+  margin: 0 auto;
 }
+
+@media (max-width: 500px) {
+.lead__image {
+  min-height: 200px;
+}
+}
+
+@media (min-width: 501px) and (max-width: 768px){
+.lead__image {
+  min-height: 480px;
+}
+}
+
+@media (min-width: 769px) and (max-width: 1024px) {
+.lead__image {
+  min-height: 580px;
+}
+}
+
+@media (min-width: 1025px) and (max-width: 1280px) {
+.lead__image {
+  min-height: 615px;
+}
+}
+
