--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,10 +1,30 @@
 .lead__subtitle {
-  color: #fff;
-  font-size: 30px;
-  line-height: 36px;
   text-align: center;
   max-width: 640px;
-  height: 72px;
-  margin: 32px auto 64px auto;
   font-weight: normal;
+}
+
+@media (max-width: 767px) {
+.lead__subtitle {
+  font-size: 16px;
+  line-height: 20px;
+  margin: 16px auto 40px auto;
+  max-width: 343px;
+}
+}
+
+@media (min-width: 768px) and (max-width: 1024px) {
+.lead__subtitle {
+  font-size: 30px;
+  line-height: 36px;
+  margin: 32px auto 56px auto;
+}
+}
+
+@media (min-width: 1025px) and (max-width: 1280px) {
+.lead__subtitle {
+  font-size: 30px;
+  line-height: 36px;
+  margin: 32px auto 64px auto;
+}
 }
