--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,10 +1,22 @@
 .lead__title {
-  color: #fff;
-  font-size: 96px;
-  line-height: 100px;
   font-weight: bold;
   text-align: center;
-  max-width: 720px;
-  height: 200px;
   margin: 0 auto;
+  
+}
+
+@media (max-width: 767px) {
+.lead__title {
+  font-size: 40px;
+  line-height: 44px;
+  max-width: 331px;
+}
+}
+
+@media (min-width: 768px) and (max-width: 1280px) {
+.lead__title {
+  font-size: 96px;
+  line-height: 100px;
+  max-width: 720px;
+}
 }
