--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -2,6 +2,13 @@
   max-width: 1280px;
   width: 100%;
   margin: 0 auto;
-  font-family: "Inter", sans-serif;
+  font-family: "Inter", Arial, Helvetica, sans-serif;
   background-color: #2a2c2f;
+  overflow: hidden;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
+  text-rendering: optimizeLegibility;
 }
