--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,10 +1,41 @@
 .photo-grid {
-  max-width: 1184px;
   display: grid;
+  box-sizing: border-box;
+  margin: 0 auto;
+}
+
+@media (max-width: 767px) {
+.photo-grid {
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(12, 1fr);
+  gap: 12px;
+  padding: 0 16px;
+}
+}
+
+@media (min-width: 721px) and (max-width: 768px) {
+.photo-grid {
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(6, 1fr);
+  gap: 16px;
+  padding: 0 24px;
+}
+}
+
+@media (min-width: 769px) and (max-width: 1024px) {
+.photo-grid {
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+  gap: 14px;
+  padding: 0 48px;
+}
+}
+
+@media (min-width: 1025px) and (max-width: 1280px) {
+.photo-grid {
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(3, 1fr);
-  box-sizing: border-box;
   gap: 16px;
-  margin: 0 auto;
-  padding-top: 92px;
+  padding: 0 48px;
+}
 }
