--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,5 +1,7 @@
 .place__image {
-  width: 460px;
-  height: 460px;
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: cover;
+  display: block;
   grid-area: image;
 }
