--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,5 +1,5 @@
 .page {
-  max-width: 1280px;
+  max-width: 100%;
   width: 100%;
   margin: 0 auto;
   font-family: "Inter", Arial, Helvetica, sans-serif;
