--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -24,7 +24,7 @@
 }
 }
 
-@media (min-width: 1024px) and (max-width: 1280px) {
+@media (min-width: 1024px) {
 .footer {
   padding-top: 92px;
   padding-left: 48px;
