--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -23,7 +23,7 @@ margin-left: 48px;
 }
 }
 
-@media (min-width: 1025px) and (max-width: 1280px) {
+@media (min-width: 1025px) {
 .lead__caption {
 margin-left: 148px;
 }
