--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -30,7 +30,7 @@ opacity: 0.8;
 }
 }
 
-@media (min-width: 1025px) and (max-width: 1280px) {
+@media (min-width: 1025px) {
 .cover__overlay {
   min-height: 740px;
 }
