--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -13,7 +13,7 @@
 }
 }
 
-@media (min-width: 768px) and (max-width: 1280px) {
+@media (min-width: 768px) {
 .footer__copyright {
   line-height: 16px;
 }
