--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -12,7 +12,7 @@ text-decoration: none;
 }
 }
 
-@media (min-width: 768px) and (max-width: 1280px) {
+@media (min-width: 768px) {
 .footer__link {
   font-size: 16px;
   line-height: 18px;
