--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -11,7 +11,7 @@
   max-width: 158px;
 }}
 
-@media (min-width: 768px) and (max-width: 1280px) {
+@media (min-width: 768px) {
 .footer__links {
   flex-direction: row;
 }}
