--- a/blocks/footer/__list/footer__list.css
+++ b/blocks/footer/__list/footer__list.css
@@ -9,7 +9,7 @@ display: flex;
 }
 }
 
-@media (min-width: 768px) and (max-width: 1280px) {
+@media (min-width: 768px) {
 .footer__list:not(:last-child) {
   margin-right: 18px;
 }
