--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -17,7 +17,7 @@ margin: auto 0;
 }
 }
 
-@media (min-width: 768px) and (max-width: 1280px) {
+@media (min-width: 768px) {
 .header__logo {
   font-size: 24px;
   line-height: 28px;
