--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -23,7 +23,7 @@
 }
 }
 
-@media (min-width: 1025px) and (max-width: 1280px) {
+@media (min-width: 1025px) {
 .header {
   padding: 28px 48px 0 48px;
 }
