--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -28,7 +28,7 @@
 }
 }
 
-@media (min-width: 1025px) and (max-width: 1280px) {
+@media (min-width: 1025px) {
 .intro {
   padding-top: 92px;
   padding-left: 148px;
