--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -2,11 +2,8 @@
   background-image: url(../../../images/lead-polka.jpg);
   max-width: 984px;
   max-height: 615px;
-  width: 100%;
-  height: 100%;
   background-size: cover;
   background-position: center;
-  display: block;
   margin: 0 auto;
 }
 
@@ -28,7 +25,7 @@
 }
 }
 
-@media (min-width: 1025px) and (max-width: 1280px) {
+@media (min-width: 1025px) {
 .lead__image {
   min-height: 615px;
 }
