--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -31,7 +31,7 @@
 }
 }
 
-@media (min-width: 1025px) and (max-width: 1280px) {
+@media (min-width: 1025px) {
 .photo-grid {
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(3, 1fr);
