--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -19,7 +19,7 @@
 }
 }
 
-@media (min-width: 769px) and (max-width: 1280px) {
+@media (min-width: 769px) {
 .place__title {
   font-size: 72px;
   line-height: 76px;
