--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -45,7 +45,7 @@ margin-bottom: 0;
 }
 }
 
-@media (min-width: 1025px) and (max-width: 1280px) {
+@media (min-width: 1025px) {
 .place {
   grid-template-columns: repeat(2, auto);
   grid-template-rows: repeat(2, auto);
