--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -2,26 +2,27 @@
   max-width: 460px;
   height: fit-content;
   grid-area: title;
+  font-weight: 900;
 }
 
 @media (max-width: 320px) {
-.place__title {
-  font-size: 32px;
-  line-height: 35px;
-  margin-left: 16px;
-}
+  .place__title {
+    font-size: 32px;
+    line-height: 35px;
+    margin-left: 16px;
+  }
 }
 
 @media (min-width: 321px) and (max-width: 768px) {
-.place__title {
-  font-size: 42px;
-  line-height: 46px;
-}
+  .place__title {
+    font-size: 42px;
+    line-height: 46px;
+  }
 }
 
 @media (min-width: 769px) {
-.place__title {
-  font-size: 72px;
-  line-height: 76px;
-}
+  .place__title {
+    font-size: 72px;
+    line-height: 76px;
+  }
 }
