--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,49 +1,46 @@
 .cover__title {
-  position: absolute;
-  display: flex;
+  position: relative;
   text-align: center;
-  font-weight: bold;
+  align-self: end;
+  font-weight: 900;
   margin-left: auto;
   margin-right: auto;
   left: 0;
   right: 0;
-  z-index: 3;
 }
 
-@media (max-width: 500px) {
-.cover__title {
-  font-size: 32px;
-  line-height: 35px;
-  max-width: 220px;
-  top: 33px;
-}
+@media (max-width: 600px) {
+  .cover__title {
+    font-size: 32px;
+    line-height: 35px;
+    max-width: 230px;
+    margin-top: 33px;
+  }
 }
 
-@media (min-width: 501px) and (max-width: 768px) {
-.cover__title {
-  font-size: 72px;
-  line-height: 76px;
-  max-width: 560px;
-  top: 115px;
-}
+@media (min-width: 601px) and (max-width: 768px) {
+  .cover__title {
+    font-size: 72px;
+    line-height: 76px;
+    max-width: 560px;
+    margin-top: 115px;
+  }
 }
 
 @media (min-width: 769px) and (max-width: 1024px) {
-.cover__title {
-  font-size: 72px;
-  line-height: 76px;
-  max-width: 560px;
-  top: 195px;
-}
+  .cover__title {
+    font-size: 72px;
+    line-height: 76px;
+    max-width: 560px;
+    margin-top: 195px;
+  }
 }
 
 @media (min-width: 1025px) {
-.cover__title {
-  font-size: 72px;
-  line-height: 76px;
-  max-width: 560px;
-  top: 245px;
+  .cover__title {
+    font-size: 72px;
+    line-height: 76px;
+    max-width: 560px;
+    margin-top: 245px;
+  }
 }
-}
-
-
