--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,20 +1,20 @@
 .footer__copyright {
   display: flex;
   font-size: 14px;
+  font-weight: 400;
   max-width: fit-content;
-  height:fit-content;
+  height: fit-content;
 }
 
 @media (max-width: 767px) {
-.footer__copyright {
-  line-height: 14px;
-  align-self: end;
-  
-}
+  .footer__copyright {
+    line-height: 14px;
+    align-self: end;
+  }
 }
 
 @media (min-width: 768px) {
-.footer__copyright {
-  line-height: 16px;
-}
+  .footer__copyright {
+    line-height: 16px;
+  }
 }
