--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -1,25 +1,24 @@
 .footer__link {
-text-decoration: none;
+  text-decoration: none;
+  font-weight: 400;
 }
 
 @media (max-width: 767px) {
-.footer__link {
-  font-size: 24px;
-  line-height: 24px;
-}
-.footer__link:not(:last-child) {
-  margin-bottom: 33px;
-}
+  .footer__link {
+    font-size: 24px;
+    line-height: 24px;
+  }
+  .footer__link:not(:last-child) {
+    margin-bottom: 33px;
+  }
 }
 
 @media (min-width: 768px) {
-.footer__link {
-  font-size: 16px;
-  line-height: 18px;
+  .footer__link {
+    font-size: 16px;
+    line-height: 18px;
+  }
+  .footer__link:not(:last-child) {
+    margin-right: 18px;
+  }
 }
-.footer__link:not(:last-child) {
-  margin-right: 18px;
-}
-}
-
-
