--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -6,12 +6,14 @@
 }
 
 @media (max-width: 767px) {
-.footer__links {
-  flex-direction: column;
-  max-width: 158px;
-}}
+  .footer__links {
+    flex-direction: column;
+    max-width: 158px;
+  }
+}
 
 @media (min-width: 768px) {
-.footer__links {
-  flex-direction: row;
-}}
+  .footer__links {
+    flex-direction: row;
+  }
+}
