--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,30 +1,30 @@
 .lead__subtitle {
   text-align: center;
   max-width: 640px;
-  font-weight: normal;
+  font-weight: 400;
 }
 
 @media (max-width: 767px) {
-.lead__subtitle {
-  font-size: 16px;
-  line-height: 20px;
-  margin: 16px auto 40px auto;
-  max-width: 343px;
-}
+  .lead__subtitle {
+    font-size: 16px;
+    line-height: 20px;
+    margin: 16px auto 40px auto;
+    max-width: 343px;
+  }
 }
 
 @media (min-width: 768px) and (max-width: 1024px) {
-.lead__subtitle {
-  font-size: 30px;
-  line-height: 36px;
-  margin: 32px auto 56px auto;
-}
+  .lead__subtitle {
+    font-size: 30px;
+    line-height: 36px;
+    margin: 32px auto 56px auto;
+  }
 }
 
 @media (min-width: 1025px) {
-.lead__subtitle {
-  font-size: 30px;
-  line-height: 36px;
-  margin: 32px auto 64px auto;
-}
+  .lead__subtitle {
+    font-size: 30px;
+    line-height: 36px;
+    margin: 32px auto 64px auto;
+  }
 }
