--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,22 +1,21 @@
 .lead__title {
-  font-weight: bold;
+  font-weight: 900;
   text-align: center;
   margin: 0 auto;
-  
 }
 
 @media (max-width: 767px) {
-.lead__title {
-  font-size: 40px;
-  line-height: 44px;
-  max-width: 331px;
-}
+  .lead__title {
+    font-size: 40px;
+    line-height: 44px;
+    max-width: 331px;
+  }
 }
 
 @media (min-width: 768px) {
-.lead__title {
-  font-size: 96px;
-  line-height: 100px;
-  max-width: 720px;
-}
+  .lead__title {
+    font-size: 96px;
+    line-height: 100px;
+    max-width: 720px;
+  }
 }
