--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -5,9 +5,15 @@
   line-height: 29.34px;
   font-size: 18px;
   margin-top: 26px;
+  font-weight: 400;
 }
 
 .place__paragraph:first-child {
-margin-top: 0;
+  margin-top: 0;
 }
 
+@media (max-width: 320px) {
+  .place__paragraph {
+    margin: 0 16px;
+  }
+}
