--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,28 +1,28 @@
 .places {
   max-width: 984px;
+  margin: 0 auto;
 }
 
 @media (max-width: 320px) {
-.places {
-  padding: 64px 0 66px 0;
- 
-}
+  .places {
+    padding: 64px 0 66px 0;
+  }
 }
 
 @media (min-width: 321px) and (max-width: 768px) {
-.places {
-  padding: 88px 24px 90px 24px;
-}
+  .places {
+    padding: 88px 24px 90px 24px;
+  }
 }
 
 @media (min-width: 769px) and (max-width: 1024px) {
-.places {
-  padding: 92px 48px;
-}
+  .places {
+    padding: 92px 48px;
+  }
 }
 
 @media (min-width: 1025px) {
-.places {
-  padding: 92px 148px;
-}
+  .places {
+    padding: 92px 148px;
+  }
 }
