--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,26 +1,23 @@
 .cover__subtitle {
   position: relative;
   text-align: center;
-  font-weight:400;
+  align-self: flex-start;
+  font-weight: 400;
   margin-left: auto;
   margin-right: auto;
-  left: 0;
-  right: 0;
-  grid-area: 'cover__subtitle';
 }
 
 @media (max-width: 600px) {
   .cover__subtitle {
     font-size: 14px;
     line-height: 16px;
-    max-width: 288px;
+    max-width: 260px;
   }
 }
 
 @media (min-width: 601px) and (max-width: 768px) {
   .cover__subtitle {
     font-size: 18px;
-    font-weight: 400;
     line-height: 22px;
     max-width: 360px;
   }
