--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,23 +1,17 @@
 .header__lang-link {
-  display: flex;
-  margin: auto 18px auto 0;
   font-weight: 400;
   text-decoration: none;
 }
 
-.header__lang-link:last-child {
-  margin: auto 0;
-}
-
 @media (max-width: 767px) {
-  .header__logo {
+  .header__lang-link {
     font-size: 18px;
     line-height: 20px;
   }
 }
 
 @media (min-width: 768px) {
-  .header__logo {
+  .header__lang-link {
     font-size: 24px;
     line-height: 28px;
   }
