--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,9 +1,9 @@
 .lead__caption {
-  width: 158px;
-  height: 14px;
   font-size: 10px;
   line-height: 14px;
   font-weight: 400;
+  letter-spacing: 1.5px;
+  text-transform: uppercase;
 }
 
 @media (max-width: 320px) {
