--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -1,7 +1,13 @@
 .intro__text {
-  max-width: 690px;
+  max-width: 720px;
   line-height: 26.08px;
   font-size: 16px;
   margin-top: 40px;
   font-weight: 400;
+}
+
+@media (min-width: 1024px) {
+  .intro__text {
+    max-width: 690px;
+  }
 }
