--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,6 +1,5 @@
 .intro {
   max-width: 984px;
-  margin: 0 auto;
 }
 
 @media (max-width: 320px) {
@@ -17,12 +16,22 @@
 
 @media (min-width: 769px) and (max-width: 1024px) {
   .intro {
-    padding: 92px 48px;
+    padding: 92px 48px 98px 48px;
   }
 }
 
-@media (min-width: 1025px) {
+@media (min-width: 1025px) and (max-width: 1280px) {
   .intro {
-    padding: 92px 148px;
+    padding-top: 92px;
+    padding-bottom: 92px;
+    padding-left: 11.56%;
+  }
+}
+
+@media (min-width: 1281px) {
+  .intro {
+    padding-top: 92px;
+    padding-bottom: 92px;
+    margin: 0 auto;
   }
 }
