--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -4,23 +4,23 @@
   font-weight: 400;
   letter-spacing: 1.5px;
   text-transform: uppercase;
+  margin-top: 8px;
 }
 
 @media (max-width: 320px) {
   .lead__caption {
-    margin-left: 16px;
+    padding-left: 16px;
   }
 }
 
 @media (min-width: 321px) and (max-width: 768px) {
   .lead__caption {
-    margin-left: 24px;
+    padding-left: 24px;
   }
 }
 
-@media (min-width: 769px) and (max-width: 984px) {
+@media (min-width: 769px) and (max-width: 928px) {
   .lead__caption {
-    margin-left: 48px;
+    padding-left: 48px;
   }
 }
-
