--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,9 +1,7 @@
 .lead__image {
-  max-width: 984px;
-  max-height: 615px;
   background-size: cover;
   background-position: center;
-  margin: 0 auto;
+  margin: 0;
 }
 
 @media (max-width: 500px) {
@@ -18,14 +16,18 @@
   }
 }
 
-@media (min-width: 769px) and (max-width: 1024px) {
+@media (min-width: 769px) and (max-width: 1279px) {
   .lead__image {
-    min-height: 580px;
+    max-height: 580px;
+    max-width: 928px;
+    margin: 0 auto;
   }
 }
 
-@media (min-width: 1025px) {
+@media (min-width: 1280px) {
   .lead__image {
-    min-height: 615px;
+    height: 615px;
+    width: 984px;
+    margin: 0 auto;
   }
 }
