--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,6 +1,24 @@
 .lead {
   width: 100%;
-  padding-top: 56px;
   margin: 0 auto;
-  max-width: 984px;
+  padding-top: 56px;
+}
+
+@media (max-width: 1224px) {
+  .lead {
+    padding-top: 48px;
+    max-width: 928px;
+  }
+}
+
+@media (min-width: 1225px) and (max-width: 1279px) {
+  .lead {
+    max-width: 928px;
+  }
+}
+
+@media (min-width: 1280px) {
+  .lead {
+    max-width: 984px;
+  }
 }
