--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,25 +1,30 @@
 .place__title {
-  max-width: 460px;
   grid-area: title;
   font-weight: 900;
 }
 
 @media (max-width: 320px) {
   .place__title {
-    font-size: 32px;
-    line-height: 35px;
     margin-left: 16px;
   }
 }
 
-@media (min-width: 321px) and (max-width: 768px) {
+@media (max-width: 767px) {
   .place__title {
-    font-size: 42px;
-    line-height: 46px;
+    font-size: 32px;
+    line-height: 35px;
   }
 }
 
-@media (min-width: 769px) {
+@media (min-width: 768px) and (max-width: 1023px) {
+  .place__title {
+    font-size: 42px;
+    line-height: 46px;
+    max-width: 330px;
+  }
+}
+
+@media (min-width: 1024px) {
   .place__title {
     font-size: 72px;
     line-height: 76px;
