--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -7,9 +7,9 @@
   margin-bottom: 0;
 }
 
-@media (max-width: 670px) {
+@media (max-width: 767px) {
   .place {
-    grid-template-columns: auto;
+    grid-template-columns: 1fr;
     grid-template-rows: repeat(4, auto);
     gap: 32px;
     grid-template-areas:
@@ -21,9 +21,9 @@
   }
 }
 
-@media (min-width: 671px) and (max-width: 768px) {
+@media (min-width: 768px) and (max-width: 1023px) {
   .place {
-    grid-template-columns: repeat(2, auto);
+    grid-template-columns: 340px 1fr;
     grid-template-rows: repeat(2, auto);
     gap: 48px 28px;
     grid-template-areas:
@@ -33,9 +33,9 @@
   }
 }
 
-@media (min-width: 769px) and (max-width: 1024px) {
+@media (min-width: 1024px) and (max-width: 1279px) {
   .place {
-    grid-template-columns: repeat(2, auto);
+    grid-template-columns: 440px 1fr;
     grid-template-rows: repeat(2, auto);
     gap: 48px 32px;
     grid-template-areas:
@@ -45,9 +45,9 @@
   }
 }
 
-@media (min-width: 1025px) {
+@media (min-width: 1280px) {
   .place {
-    grid-template-columns: repeat(2, auto);
+    grid-template-columns: 460px 1fr;
     grid-template-rows: repeat(2, auto);
     gap: 48px 40px;
     grid-template-areas:
