--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -5,13 +5,14 @@
   font-weight: 400;
   margin-left: auto;
   margin-right: auto;
+  grid-area: subtit;
 }
 
 @media (max-width: 600px) {
   .cover__subtitle {
     font-size: 14px;
     line-height: 16px;
-    max-width: 260px;
+    max-width: 275px;
   }
 }
 
